lift not fitting properly on top floor: css issue handled

--- a/style.css
+++ b/style.css
@@ -1,7 +1,25 @@
-/* .layout {
-  display: grid;
-  grid-template-columns: 1fr;
-} */
+* {
+  box-sizing: border-box;
+}
+
+.inputContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  gap: 10px; 
+}
+
+.inputContainer label {
+  margin-right: 5px 
+}
+
+.title {
+  text-align: center;
+}
+
+.layout {
+  margin-top: 10px;
+}
 
 .floor {
   height: 100px;
@@ -12,7 +30,6 @@
   justify-content: space-between;
   position: relative;
 }
-
 
 .lift {
   width: 80px;
@@ -30,6 +47,15 @@
   flex-direction: column;
   gap: 10px;
   width: 50px
+}
+
+
+.sourceCodeLInk{
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  padding: 10px;
+  text-decoration: none;
 }
 
 
